# Blockchain-Indexer

./: .env.template  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.codex/environments/: environment.toml
admin-panel/: .env.example  Dockerfile  index.html  nginx.conf  package.json
admin-panel/src/: App.tsx  api.ts  styles.css
cli/: indexer_cli.py
config/: indexer.yaml
diploma/: main.aux  main.bbl  main.bcf  main.bib  main.blg  main.fdb_latexmk  main.fls  main.glo-abr  main.run.xml  main.tex  main.toc  main.xdv  main.xdy
diploma-docker/: Dockerfile  README.md
diploma/contents/: 0-abstract.aux  0-abstract.tex  1-introduction.aux  1-introduction.tex  2-00-compilation.aux  2-00-compilation.tex  2-01-titlepage.aux  2-01-titlepage.tex  2-02-techtask.aux  2-02-techtask.tex  2-03-abstract.aux  2-03-abstract.tex  2-04-glossary.aux  2-04-glossary.tex  2-05-figures.aux  2-05-figures.tex  2-06-citations.aux  2-06-citations.tex  2-07-tables.aux  2-07-tables.tex  2-08-enums.aux  2-08-enums.tex  2-09-formulas.aux  2-09-formulas.tex  2-10-math.aux  2-10-math.tex  2-11-algorithms.aux  2-11-algorithms.tex  2-12-listings.aux  2-12-listings.tex  3-conclusion.aux  3-conclusion.tex  4-appendix-a.aux  4-appendix-a.tex  4-appendix-b.aux  4-appendix-b.tex  4-appendix-c.aux  4-appendix-c.tex  4-appendix-d.aux  4-appendix-d.tex  (+2 more)
doc/acceptance/: README.md
doc/admin-panel/: README.md
doc/api-docs/: README.md
doc/backend-bootstrap/: README.md
doc/cli/: README.md
doc/config-and-auth/: README.md
doc/data-api/: README.md
doc/database-schema/: README.md
doc/indexer/: README.md
doc/jobs/: README.md
doc/mempool/: README.md
doc/metrics/: README.md
doc/nodes/: README.md
doc/reorg/: README.md
doc/rpc/: README.md
doc/storage/: README.md
doc/testing/: README.md
migrations/: 0001_init.sql  0002_transactions_position.sql  0003_nodes_registry.sql
report/: README.md  main.tex
report/bpmn/: README.md  bpmn-admin-process.puml  bpmn-data-serving-process.puml  bpmn-indexer-process.puml
report/c4/: README.md  (+2 more)
scripts/: coverage.ps1
src/: app.rs  main.rs
tests/: integration_indexer_pipeline.rs  integration_jobs_api.rs  integration_runtime_runners.rs
(+21 files in other folders)
